# call-center-intel

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  specs.md
config/: compliance_rules.yaml
docs/: ARCHITECTURE.md  DATA_SCHEMAS.md  DECISIONS.md  DEVELOPMENT_PHASES.md  ENV_CONFIGURATION.md  QUICK_START.md
evals/: eval_e2e_golden.py  eval_qa_scoring.py  eval_summarization.py  utils.py
evals/fixtures/: fixture_01_billing_resolved.json  fixture_02_account_inquiry_compliance_violation.json  fixture_03_credit_dispute_escalated.json
evals/golden/: account_unlock_e2e.yaml
mcp_servers/: compliance_rules_server.py  historical_stats_server.py
scripts/: generate_test_audio.py  test_pipeline_live.py  test_ui_concurrency.py
src/agents/: intake_agent.py  qa_scoring_agent.py  report_agent.py  summarization_agent.py  transcription_agent.py
src/common/: exceptions.py  logger.py
src/config/: loader.py  settings.yaml
src/database/: database.py  models.py  repository.py
src/graph/: pipeline.py  routing.py  state.py
src/models/: schemas.py
src/security/: audit_logger.py  injection_detector.py  pii_redactor.py
src/services/: audio_utils.py  diarization.py  llm_factory.py  mcp_client.py  pdf_generator.py  whisper_model.py
src/ui/: analyze_tab.py  history_tab.py  interface.py  observability_tab.py
tests/integration/: test_persistence.py  test_pipeline.py
tests/security/: test_audit_logger.py  test_injection_detector.py  test_pii_redactor.py
tests/unit/: test_audio_utils.py  test_config.py  test_logger.py  (+8 more)
